podcast: show all feeds in the browser when not searching

Rather than building the feed browser model off the query used
to create the episode list, when there is no search query, use
a separate query so as to include feeds that don't have any
episodes.

https://bugzilla.gnome.org/show_bug.cgi?id=673533